2004-12-07  Joseph S. Myers  <jsm@polyomino.org.uk>

	* arithmetic/arithmetic.c, battlestar/getcom.c,
	boggle/boggle/bog.c, boggle/boggle/mach.c,
	canfield/canfield/canfield.c, cribbage/io.c, dm/dm.c,
	fortune/fortune/fortune.c, gomoku/stoc.c, hack/hack.u_init.c,
	hangman/getword.c, hunt/hunt/hunt.c, hunt/hunt/otto.c,
	hunt/huntd/answer.c, mille/move.c, monop/getinp.c, monop/misc.c,
	number/number.c, pig/pig.c, robots/main.c, sail/dr_1.c,
	sail/misc.c, sail/pl_4.c, sail/pl_5.c, worms/Makefile.bsd,
	wtf/acronyms, wtf/acronyms.comp: Update from NetBSD CVS.

2004-10-31  Joseph S. Myers  <jsm@polyomino.org.uk>

	* lib/fgetln.c: Handle case of line just fitting in buffer
	correctly.

2004-10-23  Joseph S. Myers  <jsm@polyomino.org.uk>

	* dm/utmpentry.c: Update from NetBSD CVS.

2004-09-15  Joseph S. Myers  <jsm@polyomino.org.uk>

	* fortune/fortune/fortune.6.in, fortune/strfile/strfile.8,
	worms/worms.c: Update from NetBSD CVS.

2004-09-08  Joseph S. Myers  <jsm@polyomino.org.uk>

	* atc/log.c, sail/dr_1.c, sail/sync.c: Update from NetBSD CVS.

2004-09-04  Joseph S. Myers  <jsm@polyomino.org.uk>

	* wtf/acronyms: Update from NetBSD CVS.

2004-09-02  Joseph S. Myers  <jsm@polyomino.org.uk>

	* robots/auto.c, robots/move.c: Update from NetBSD CVS.

2004-08-23  Joseph S. Myers  <jsm@polyomino.org.uk>

	* fortune/datfiles/fortunes: Update from NetBSD CVS.

2004-07-16  Joseph S. Myers  <jsm@polyomino.org.uk>

	* wtf/acronyms.comp: Update from NetBSD CVS.

2004-07-05  Joseph S. Myers  <jsm@polyomino.org.uk>

	* wtf/acronyms: Update from NetBSD CVS.

2004-06-07  Joseph S. Myers  <jsm@polyomino.org.uk>

	* wtf/acronyms.comp: Update from NetBSD CVS.

2004-06-02  Joseph S. Myers  <jsm@polyomino.org.uk>

	* hack/hack.6.in: Update from NetBSD CVS.

2004-05-24  Joseph S. Myers  <jsm@polyomino.org.uk>

	* fortune/datfiles/fortunes: Update from NetBSD CVS.

2004-05-20  Joseph S. Myers  <jsm@polyomino.org.uk>

	* wtf/acronyms.comp: Update from NetBSD CVS.
